day 2 many new functions, forum part of the application works i think, direct messaging related functions underway still

--- a/templates/account.html
+++ b/templates/account.html
@@ -1,5 +1,12 @@
+<title>Generaali foorumi nro 428</title>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <h1>Kirjaudu</h1>
 <b><a href="/">Takaisin</a></b>
+{% if error %}
+  <h2 style="color:red">{{error_msg}}</h2>
+{% endif %}
 <form action="/login" method="POST">
     <label for="name">Käyttäjänimi:</label><br>
     <input type="text" id="name" name="accname" value=""><br>
