--- a/templates/newarea.html
+++ b/templates/newarea.html
@@ -2,16 +2,14 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<h1>Uusi Keskustelu</h1>
-<a href="/area/{{area}}">Takaisin</a>
+<h1>Uusi Keskustelualue</h1>
+<a href="/">Takaisin</a>
 {% if error %}
   <h2 style="color:red">{{error_msg}}</h2>
 {% endif %}
-<form action="/area/{{area}}/creatediscussion" method="POST">
-    <label for="name">Otsikko:</label><br>
+<form action="/newarea/confirm" method="POST">
+    <label for="name">Alueen nimi:</label><br>
     <input type="text" id="name" name="title" value=""><br>
-    <label for="body">Ensimmäinen viesti:</label><br>
-    <input type="text" id="body" name="body" value="" width="200px" height="200px"><br><br>
     <input type="submit" value="Julkaise">
     <br>
   </form>
