--- a/templates/personal.html
+++ b/templates/personal.html
@@ -1,4 +1,4 @@
-<title><b>Generaali foorumi nro 428</b></title>
+<title>Generaali foorumi nro 428</title>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -8,7 +8,6 @@
 <table>
     <a href="/started">Omat keskustelut</a><br>
     <a href="/friendlist">Kaverilista</a><br>
-    <a href="/adminreq">Pyydä admin oikeuksia</a><br>
     <a href="/changepass">Vaihda salasana</a><br>
     <a href="/rmvuser">Poista käyttäjä</a><br>
 </table>
