--- a/templates/rmvuser.html
+++ b/templates/rmvuser.html
@@ -1,4 +1,4 @@
-<title><b>Generaali foorumi nro 428</b></title>
+<title>Generaali foorumi nro 428</title>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -6,7 +6,7 @@
 <h1>Käyttäjä: {{session.username}}</h1>
 <br>
 <h2>Vahvista käyttäjätiedot poistaaksesi käyttäjän</h2>
-<form action="/" method="POST">
+<form action="/rmvuser/confirm" method="POST">
     <label for="name">Käyttäjänimi:</label><br>
     <input type="text" id="name" name="accname" value=""><br>
     <label for="pass">Salasana:</label><br>
