--- a/templates/changepass.html
+++ b/templates/changepass.html
@@ -1,10 +1,13 @@
-<title><b>Generaali foorumi nro 428</b></title>
+<title>Generaali foorumi nro 428</title>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <b><a href="/personal">Takaisin</a></b>
 <h1>Käyttäjä: {{session.username}}</h1>
 <br>
+{% if error %}
+  <h2 style="color:red">{{error_msg}}</h2>
+{% endif %}
 <h2>Syötä salasanat</h2><br><br>
 <form action="/changepass/confirm" method="POST">
     <label for="oldpass">Vanha salasana:</label><br>
