--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,34 @@
-<title><b>Generaali foorumi nro 428</b></title>
+<title>Generaali foorumi nro 428</title>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <h1>Keskustelualueet:</h1> 
 {% if session.username %}
-    <div width="200px" height="100px">Terve <a href="/personal">{{session.username}}</a>!</div><br>
+    <div>Terve {{session.username}}!</div>
+    <div><a href="/personal">Käyttäjä</a></div>
     <p><a href="/logout">Kirjaudu ulos</a></p>
 {% else %}
     <p><a href="/account">Kirjaudu</a></p>
 {% endif %}
-<br>
+<h3>Hakutyökalu:</h3><span>palauttaa keskustelut jotka sisältää hakusanan</span>
+<form action="/search" method="GET">
+    <input type="text" name="query">
+    <input type="submit" value="Hae">
+</form>
+<b><hr></b>
+{% if is_admin %}
+    <a href="/newarea">Avaa uusi keskustelualue</a>
+{% endif %}
 <ul>
 {%for area in areas%}
 <section>
-<p style="border:2px solid aquamarine;" width="100" margin="20px">
+<p style="border:2px solid gray;" width="100" margin="20px">
 <br>
 <b>{{area.names}}</b><br>
 <br>
 <button onclick="document.location='/area/{{area.id}}'">Liity alueelle</button>
 <br>
-</p></section>
+</p>
+</section>
 {%endfor%}
 </ul>
