--- a/templates/newaccount.html
+++ b/templates/newaccount.html
@@ -1,4 +1,11 @@
+<title>Generaali foorumi nro 428</title>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <h1>Uusi Käyttäjä</h1>
+{% if error %}
+  <h2 style="color:red">{{error_msg}}</h2>
+{% endif %}
 <form action="/create" method="POST">
     <label for="name">Käyttäjänimi:</label><br>
     <input type="text" id="name" name="accname" value=""><br>
